--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,6 +28,18 @@ h1 {
     color: black;
 }
 
+.desc{
+    width: 98%;
+    border-radius: 5px;
+    border:solid black;
+    height: 200px;
+}
+.titulo{
+    width: 50%;
+    border-radius: 5px;
+    border:solid black;
+}
+
 button {
     background-color: #FE9900;
     color: white;
